--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,4 @@
-<div class="bg-custom-gradient min-h-screen flex flex-col items-center justify-start p-5">
+<div class="flex flex-col justify-start items-center p-5 min-h-screen bg-custom-gradient">
   <app-header></app-header>
+  <app-filters></app-filters>
 </div>
