--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,9 @@
   --button: #eee; /* neutral-100 */
   --button-hover: #c6c6c6; /* neutral-300 */
   --text-color: #091540; /* neutral-900 */
+  --button-active: #de4840; /* red-500 */
+  --button-active-hover: #f25c54; /* red-400 */
+  --focus-active: #f25c54; /* red-400 */
 
   --neutral-900: #091540;
   --neutral-800: #202535;
@@ -33,6 +36,9 @@
   --color-button: var(--button);
   --color-button-hover: var(--button-hover);
   --color-text-color: var(--text-color);
+  --color-button-active: var(--button-active);
+  --color-button-active-hover: var(--button-active-hover);
+  --color-focus-active: var(--focus-active);
 
   --color-red-700: var(--red-700);
   --color-red-500: var(--red-500);
@@ -53,6 +59,9 @@
   --button-hover: #c6c6c6; /* neutral-300 */
   --button-hover: #535868; /* neutral-600 */
   --text-color: #fbfdfe; /* neutral-0 */
+  --button-active: #f25c54; /* red-400 */
+  --button-active-hover: #de4840; /* red-700 */
+  --focus-active: #091540; /* neutral-900 */
 
   --neutral-900: #091540;
   --neutral-200: #d6e2f5;
