Update app configuration, routing, and layout to support new components for listing and managing extensions. Can delete an extension

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
 <div class="flex flex-col justify-start items-center p-5 min-h-screen bg-custom-gradient">
   <app-header></app-header>
-  <app-filters></app-filters>
-  <app-card-item></app-card-item>
+  <router-outlet></router-outlet>
 </div>
