Refactor ExtensionService and CardItem component to streamline extension removal process.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
-<div class="flex flex-col justify-start items-center p-5 min-h-screen bg-custom-gradient">
+<div class="flex flex-col p-5 min-h-screen bg-custom-gradient w-full">
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <div class="w-full max-w-[1100px] mx-auto flex flex-col items-center">
+    <router-outlet></router-outlet>
+  </div>
 </div>
