--- a/src/app/card-item/card-item.html
+++ b/src/app/card-item/card-item.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col p-5 w-[382px] h-[200px] bg-background shadow-lg rounded-[20px]">
+<div class="flex flex-col p-5 w-[343px] lg:w-[382px] h-[200px] bg-background shadow-lg rounded-[20px]">
   <div class="flex gap-4">
     <img [src]="extension.logo" [alt]="extension.name" class="w-[60px] h-[60px]" />
     <div>
