--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,5 +1,5 @@
 <header
-  class="flex items-center justify-between w-[345px] bg-background px-2 py-2 rounded-[10px] border border-border-card shadow-md"
+  class="flex items-center justify-between w-full max-w-[1100px] bg-background px-2 py-2 rounded-[10px] border border-border-card shadow-md mx-auto h-[66px] md:h-[74px]"
   role="banner" aria-label="Browser Extensions Manager Header">
   <div class="flex gap-3 justify-start items-center w-full">
     <img src="./images/logo.png" alt="Browser Extensions Manager Logo" />
