--- a/src/app/list-extension/list-extension.html
+++ b/src/app/list-extension/list-extension.html
@@ -1,6 +1,8 @@
-<app-filters (filterChanged)="onFilterChanged($event)"></app-filters>
-<div class="flex flex-col gap-3">
-  @for (extension of filteredExtensions(); track extension.id) {
-  <app-card-item [extension]="extension" (extensionRemoved)="onExtensionRemoved($event)"></app-card-item>
-  }
-</div>
+<section class="w-full">
+  <app-filters (filterChanged)="onFilterChanged($event)"></app-filters>
+  <div class="flex flex-col gap-3">
+    @for (extension of filteredExtensions(); track extension.id) {
+    <app-card-item [extension]="extension" [onDelete]="deleteExtension"></app-card-item>
+    }
+  </div>
+</section>
