--- a/src/app/filters/filters.html
+++ b/src/app/filters/filters.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-6 justify-center items-center my-10">
+<div class="flex flex-col md:flex-row md:justify-between w-full gap-6 justify-center items-center my-10">
   <h2 class="text-4xl font-bold">Extensions List</h2>
   <div class="flex gap-4">
     @for (filter of filters; track filter) {
