--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -9,9 +9,9 @@
   </div>
   <button (click)="toggleMode()"
     class="flex justify-center items-center w-12 h-12 rounded-lg transition-colors duration-300 cursor-pointer bg-button hover:bg-button-hover"
-    [attr.aria-pressed]="darkModeSignal()" aria-label="Toggle dark mode" type="button">
-    <img [src]="darkModeSignal() ? './images/icon-sun.svg' : './images/icon-moon.svg'"
-      [alt]="darkModeSignal() ? 'Switch to light mode' : 'Switch to dark mode'">
+    [attr.aria-pressed]="isDarkMode" aria-label="Toggle dark mode" type="button">
+    <img [src]="isDarkMode ? './images/icon-sun.svg' : './images/icon-moon.svg'"
+      [alt]="isDarkMode ? 'Switch to light mode' : 'Switch to dark mode'">
     <span class="sr-only">
       Toggle dark mode
     </span>
