Refactor ExtensionService and ListExtension component to utilize signals for state management, update related tests.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col p-5 min-h-screen bg-custom-gradient w-full">
   <app-header></app-header>
-  <div class="w-full max-w-[1100px] mx-auto flex flex-col items-center">
+  <div class="w-full max-w-[1100px] mx-auto ">
     <router-outlet></router-outlet>
   </div>
 </div>
